@startuml
' Domain Overview — Aggregate Roots
skinparam classAttributeIconSize 0
skinparam packageStyle Rectangle
skinparam ArrowColor #555555
skinparam ClassBorderColor #888888
hide empty members

package "Shipments" {
  class HomeShipment <<AggregateRoot>> #D4E6F1
  class CVSShipment <<AggregateRoot>> #D4E6F1
  class Shipment <<AggregateRoot>> #D4E6F1
}

package "Payments" {
  class Payment <<AggregateRoot>> #D4E6F1
}

package "Products" {
  class Product <<AggregateRoot>> #D4E6F1
}

package "Tags" {
  class Tag <<AggregateRoot>> #D4E6F1
}

package "Carts" {
  class Cart <<AggregateRoot>> #D4E6F1
}

package "Sizes" {
  class Size <<AggregateRoot>> #D4E6F1
}

package "Users" {
  class User <<AggregateRoot>> #D4E6F1
}

package "Orders" {
  class Order <<AggregateRoot>> #D4E6F1
}

package "Categories" {
  class Category <<AggregateRoot>> #D4E6F1
}

' --- Cross-Aggregate References ---
Payment --> Order : OrderId
Product --> Category : CategoryId
Cart --> User : UserId
Order --> User : UserId

@enduml